change top design and more

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,9 +3,9 @@
 /* 変数
 /* ---------------------------------------------------------- */
 
-$main-color: #94540d;
-$main-sub-color: #fccdc5;
-$base-color: #ffeec9;
+$main-color: #264653;
+$main-sub-color: #f4a261;
+$base-color: #e9c46a;
 $text-color: #524747;
 
 $thin-gray: #f7f7f7;
