--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 @import "./mixin";
+@import "./effect";
 @import "./common/common";
 @import "./common/text";
 @import "./common/form";
